# pixel-editor

./: CMakeLists.txt  Editor.qml  Main.qml  PixelCanvas.qml  editorstate.cpp  editorstate.cpp.autosave  editorstate.h  main.cpp
